%% Sub-DSF for internal automaton during ACTIVE mode of the top-level DSF.
%% This DSF functions as a watchdog, continuously monitoring and managing
%% asynchronous operations such as:
%% - transition evaluation
%% - dynamics evaluation
%% - invariant enforcement
%% and other critical processes within the automaton's execution context.

stateDiagram-v2
    direction LR

    %% Entry point
    [*] --> ACTIVE: ON_VALID_MISSION_REQUEST

    %% Main operational flow (horizontal)
    ACTIVE --> TRANSITIONING: TRANSITION_GUARD_ENABLED
    TRANSITIONING --> ACTIVE: TRANSITION_COMPLETE
    ACTIVE --> MISSION_COMPLETE: MISSION_COMPLETE

    %% Error handling branch (below main flow)
    ACTIVE --> ERROR: RECOVERABLE_ERROR
    TRANSITIONING --> ERROR: TRANSITION_FAILURE
    ERROR --> RECOVERING: ATTEMPT_FIX
    ERROR --> FATAL: CRITICAL_FAILURE
    RECOVERING --> ACTIVE: RECOVERED
    RECOVERING --> ERROR: RECOVERY_FAILED

    %% Warning handling branch (above main flow)
    ACTIVE --> WARNING: NON_BLOCKING_ANOMALY
    WARNING --> ACTIVE: ANOMALY_RESOLVED_OR_TIMEOUT

    %% Terminal state
    FATAL --> [*]: SHUTDOWN
    MISSION_COMPLETE --> [*]: RETURN TO INACTIVE STATE

    %% State styling for better visualization
    classDef inactiveState fill:#e1f5fe,stroke:#0288d1,stroke-width:2px
    classDef activeState fill:#e8f5e8,stroke:#4caf50,stroke-width:2px
    classDef transitionState fill:#fff3e0,stroke:#ff9800,stroke-width:2px
    classDef warningState fill:#fff8e1,stroke:#ffc107,stroke-width:2px
    classDef errorState fill:#ffebee,stroke:#f44336,stroke-width:2px
    classDef fatalState fill:#ffcdd2,stroke:#d32f2f,stroke-width:3px
    classDef completeState fill:#f3e5f5,stroke:#9c27b0,stroke-width:2px

    class INACTIVE inactiveState
    class ACTIVE activeState
    class TRANSITIONING transitionState
    class WARNING warningState
    class ERROR errorState
    class RECOVERING errorState
    class FATAL fatalState
    class MISSION_COMPLETE completeState
